# ESP32C3-WIFI-MQTT

./: .clangd  .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_main.c  app_status.c  app_status.h  esp_status_report.c  esp_status_report.h  hello_world.c  idf_component.yml  line_reader.c  line_reader.h  network.c  network.h  sd_logger.c  sd_logger.h  status_strings.h  stm32_protocol.c  stm32_protocol.h  stm32_protocol_impl.inc  uart_bridge.c  uart_bridge.h  usb_transport.c  usb_transport.h
tools/: README.md  VERIFY_BRIDGE.md  mosquitto_lan_172.conf  publish_pc_time.py  test_stm32_protocol_parser.py  verify_bridge_flow.py
